<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctors">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:minWidth="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="ФИО" />
            <EditText
                android:id="@+id/editTextFIO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"   >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible"
                android:text="Подр" />

            <EditText
                android:id="@+id/editTextDepartment"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_new"
            android:layout_width="75dp"
            android:layout_marginEnd="5dp"
            android:onClick="buttonNEWdoc"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:layout_marginEnd="5dp"
            android:onClick="buttonSAVEdoc"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_del"
            android:layout_width="75dp"
            android:layout_marginEnd="5dp"
            android:onClick="buttonDELdoc"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_file"
            android:layout_marginEnd="5dp"
            android:onClick="buttonFILESdoc"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/TableLayoutDOCTORS"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableLayout>
</ScrollView>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>