<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zagruzka_day_excel_test2">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ExelDocIDTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="-1" />

            <Button
                android:id="@+id/buttonDownloadExcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/button_file" />


            <Button
                android:id="@+id/ExcelbuttonShowAllExcel2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_show" />
            <Button
                android:id="@+id/ExcelbuttonClearAll2"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@color/purple_200"
                android:layout_weight="1">
            <TextView
                android:id="@+id/textViewTestExcel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="File:" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/ViewPager2ExcelTEST"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>