<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="Name:" />

            <EditText
                android:id="@+id/editTextNAMEspr"
                android:layout_width="250dp"
                android:layout_height="40dp"></EditText>
            <EditText
                android:id="@+id/editTextIDspr"
                android:visibility="gone"
                android:layout_width="250dp"
                android:layout_height="40dp"></EditText>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <Button
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_new"
                android:layout_width="75dp"
                android:layout_marginEnd="5dp"
                android:onClick="buttonNEWspravochnik"/>

            <Button
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/button_save"

                android:onClick="buttonSAVEspravochnik"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_del"
                android:layout_width="75dp"
                android:layout_marginEnd="5dp"
                android:onClick="buttonDELspravochnik"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ScrollView
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:id="@+id/TableLayoutspravochnik"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TableLayout>
            </ScrollView>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>